Did naive Bernoulli and Decision tree

--- a/Assignment 5/01-Exploration.ipynb
+++ b/Assignment 5/01-Exploration.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,11 @@
     "import pickle\n",
     "from tensorflow import keras\n",
     "from typing import List\n",
+    "\n",
     "from sklearn.feature_extraction.text import HashingVectorizer\n",
+    "from sklearn.naive_bayes import BernoulliNB\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
     "\n",
     "newparams = {'figure.figsize': (12, 6), 'axes.grid': False,\n",
     "             'lines.linewidth': 2,\n",
@@ -23,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,6 +38,88 @@
     "y_test: List[int] = data[\"y_test\"]\n",
     "x_train: List[str] = data[\"x_train\"]\n",
     "y_train: List[int] = data[\"y_train\"]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer: HashingVectorizer = HashingVectorizer()\n",
+    "\n",
+    "X_test = vectorizer.transform(x_test)\n",
+    "X_train = vectorizer.transform(x_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "classifierBNB = BernoulliNB()\n",
+    "classifierDT = DecisionTreeClassifier()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "DecisionTreeClassifier()"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classifierBNB.fit(X=X_train, y=y_train)\n",
+    "classifierDT.fit(X=X_train, y=y_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "resBNB = classifierBNB.predict(X_test)\n",
+    "resDT = classifierDT.predict(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "scoreBNB = accuracy_score(y_test, resBNB)\n",
+    "scoreDT = accuracy_score(y_test, resDT)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.7987021941652366\n",
+      "0.8597542289776906\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(scoreBNB)\n",
+    "print(scoreDT)"
    ]
   }
  ],
