Did more work on model

--- a/Assignment 5/02-Part2.ipynb
+++ b/Assignment 5/02-Part2.ipynb
@@ -9,8 +9,8 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-25 15:36:09.520336: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
-      "2022-03-25 15:36:09.520375: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
+      "2022-03-30 15:07:13.754052: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcudart.so.11.0'; dlerror: libcudart.so.11.0: cannot open shared object file: No such file or directory\n",
+      "2022-03-30 15:07:13.754092: I tensorflow/stream_executor/cuda/cudart_stub.cc:29] Ignore above cudart dlerror if you do not have a GPU set up on your machine.\n"
      ]
     }
    ],
@@ -59,62 +59,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-25 15:37:16.679733: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
-      "2022-03-25 15:37:16.679785: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
-      "2022-03-25 15:37:16.679921: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (LAPTOP-6S51GAGA): /proc/driver/nvidia/version does not exist\n",
-      "2022-03-25 15:37:16.680581: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
-      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "model = keras.Sequential()\n",
-    "model.add(keras.layers.Embedding(vocab_size, 8))\n",
-    "model.add(keras.layers.LSTM(8))\n",
-    "model.add(keras.layers.Dense(1))\n",
-    "model.compile(optimizer=keras.optimizers.Adam(learning_rate=1e-3),\n",
-    "              loss=keras.losses.BinaryCrossentropy())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2022-03-25 15:37:20.913247: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 1669689144 exceeds 10% of free system memory.\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "12283/12283 [==============================] - 2801s 228ms/step - loss: 0.3864\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fa1219466a0>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model.fit(X_train, np.array(y_train))"
+    "model.add(keras.layers.Embedding(vocab_size, output_dim=int(max_length*2), input_length=X_train.shape[1]))\n",
+    "model.add(keras.layers.Dropout(0.2))\n",
+    "model.add(keras.layers.LSTM(units=16))\n",
+    "model.add(keras.layers.Dropout(0.2))\n",
+    "model.add(keras.layers.Dense(units=8, activation=\"softmax\"))\n",
+    "model.compile(metrics=[\"accuracy\"], optimizer=keras.optimizers.Adam(learning_rate=1e-1, decay=1e-2),\n",
+    "              loss=\"sparse_categorical_crossentropy\")"
    ]
   },
   {
@@ -126,25 +82,75 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2022-03-25 16:36:46.743833: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 554482944 exceeds 10% of free system memory.\n"
+      "2022-03-30 13:40:15.261288: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 1669689144 exceeds 10% of free system memory.\n",
+      "2022-03-30 13:40:20.064164: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n",
+      "2022-03-30 13:40:20.322717: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n",
+      "2022-03-30 13:40:20.322818: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n",
+      "2022-03-30 13:40:20.902379: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.fit(X_train, np.array(y_train), epochs=1)\n",
+    "model.save(\"model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-30 15:06:48.508037: W tensorflow/stream_executor/platform/default/dso_loader.cc:64] Could not load dynamic library 'libcuda.so.1'; dlerror: libcuda.so.1: cannot open shared object file: No such file or directory\n",
+      "2022-03-30 15:06:48.508277: W tensorflow/stream_executor/cuda/cuda_driver.cc:269] failed call to cuInit: UNKNOWN ERROR (303)\n",
+      "2022-03-30 15:06:48.508313: I tensorflow/stream_executor/cuda/cuda_diagnostics.cc:156] kernel driver does not appear to be running on this host (LAPTOP-6S51GAGA): /proc/driver/nvidia/version does not exist\n",
+      "2022-03-30 15:06:48.509349: I tensorflow/core/platform/cpu_feature_guard.cc:151] This TensorFlow binary is optimized with oneAPI Deep Neural Network Library (oneDNN) to use the following CPU instructions in performance-critical operations:  AVX2 FMA\n",
+      "To enable them in other operations, rebuild TensorFlow with the appropriate compiler flags.\n"
+     ]
+    }
+   ],
+   "source": [
+    "model = keras.models.load_model(\"model.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-30 15:06:52.619307: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 554482944 exceeds 10% of free system memory.\n",
+      "2022-03-30 15:06:53.250515: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n",
+      "2022-03-30 15:06:53.396253: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4079/4079 [==============================] - 242s 59ms/step - loss: 0.2765\n"
+      "   1/4079 [..............................] - ETA: 1:29:13 - loss: 2.0820 - accuracy: 0.2500"
      ]
     },
     {
-     "data": {
-      "text/plain": [
-       "0.2765265703201294"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2022-03-30 15:06:54.165629: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n",
+      "2022-03-30 15:06:54.239720: W tensorflow/core/framework/cpu_allocator_impl.cc:82] Allocation of 288728064 exceeds 10% of free system memory.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  12/4079 [..............................] - ETA: 27:48 - loss: 2.0818 - accuracy: 0.1198"
+     ]
     }
    ],
    "source": [
